// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemainingTime /> should render correctly remaining time (days left) 1`] = `
<span>
  <span
    className="excerpt_dark"
  >
    2
  </span>
   
  <FormattedMessage
    id="count.daysLeft"
    values={
      Object {
        "count": 2,
      }
    }
  />
</span>
`;

exports[`<RemainingTime /> should render correctly remaining time (hours left) 1`] = `
<span>
  <span
    className="excerpt_dark"
  >
    4
  </span>
   
  <FormattedMessage
    id="count.hoursLeft"
    values={
      Object {
        "count": 4,
      }
    }
  />
</span>
`;

exports[`<RemainingTime /> should render correctly remaining time (minutes left) 1`] = `
<span>
  <span
    className="excerpt_dark"
  >
    20
  </span>
   
  <FormattedMessage
    id="count.minutesLeft"
    values={
      Object {
        "count": 20,
      }
    }
  />
</span>
`;
